syntax = "proto3";
option java_multiple_files = true;
option java_package = "io.grpc.jchannelRpc";
option java_outer_classname = "JChannelRpc";
option objc_class_prefix = "YINGMING";
package cn.yingming.grpc1;

service JChannelsService{
  rpc connect(ConnectReq) returns (ConnectRep){
  }
  rpc disconnect(DisconnectReq) returns (DisconnectRep){
  }
  rpc send(SendReq) returns (SendRep){
  }

}

// used for jchannel service
message ConnectReq{
  string source = 1;
  string name = 2;
  string cluster_name = 3;
}
message ConnectRep{
  string result = 1;
  int32 index = 2;
  int32 size = 3;
}
message DisconnectReq{
  string source = 1;
  string name = 2;
  string cluster_name = 3;
}
message DisconnectRep{
  string result = 1;
}
message SendReq{
  string source = 1;
  string name = 2;
  string message = 3;
  string address = 4;
  string cluster_name = 5;
}
message SendRep{
  string
}